[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Avatar/Avatar.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -290.5
margin_top = -118.0
margin_right = 290.5
margin_bottom = 118.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
margin_left = 16.0
margin_top = 22.0
margin_right = 56.0
margin_bottom = 36.0
text = "E-mail"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditEmail" type="LineEdit" parent="Panel"]
margin_left = 19.0
margin_top = 39.0
margin_right = 321.0
margin_bottom = 63.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Panel"]
margin_left = 16.0
margin_top = 78.0
margin_right = 101.0
margin_bottom = 92.0
text = "Use gravatar?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnGravatar" type="OptionButton" parent="Panel"]
margin_left = 21.0
margin_top = 96.0
margin_right = 316.0
margin_bottom = 116.0
text = "No - Only use internally generated"
items = [ "No - Only use internally generated", null, false, 0, null, "Yes - If not found, use internally generated", null, false, 1, null, "Yes - With default: mp (mystery person)", null, false, 2, null, "Yes - With default: identicon", null, false, 3, null, "Yes - With default: monsterid", null, false, 4, null, "Yes - With default: wavatar", null, false, 5, null, "Yes - With default: retro", null, false, 6, null, "Yes - With default: robohash", null, false, 7, null, "Yes - With default: blank", null, false, 8, null ]
selected = 0

[node name="BtnCache" type="CheckButton" parent="Panel"]
margin_left = 18.0
margin_top = 135.0
margin_right = 318.0
margin_bottom = 175.0
pressed = true
text = "Use cache (only generate once)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnGenerate" type="Button" parent="Panel"]
margin_left = 24.0
margin_top = 188.0
margin_right = 320.0
margin_bottom = 216.0
text = "Generate"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -213.0
margin_top = 22.0
margin_right = -21.0
margin_bottom = 214.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayRect" type="TextureRect" parent="Panel/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true

[node name="Avatar" type="Node" parent="."]
script = ExtResource( 2 )
[connection signal="pressed" from="Panel/BtnGenerate" to="." method="_on_BtnGenerate_pressed"]
